@@ -6,7 +6,7 @@
 // Modified by Martin Sandve Alnes, 2008.
 //
 // First added:  2003-11-28
-// Last changed: 2009-03-04
+// Last changed: 2009-06-22
 
 #ifndef __FUNCTION_H
 #define __FUNCTION_H
@@ -129,7 +129,7 @@ namespace dolfin
     void interpolate();
 
     /// Interpolate function to vertices of mesh
-    void interpolate(double* vertex_values) const;
+    void interpolate_vertex_values(double* vertex_values) const;
 
     /// Friends
     friend class Coefficient;
