@@ -276,7 +276,7 @@ void VTKFile::results_write(const Function& u) const
     double* values = new double[size];
 
     // Get function values at vertices
-    u.interpolate(values);
+    u.interpolate_vertex_values(values);
 
     if (rank == 0)
     {
